# caregiver-r1

./: .gitignore  AGENTS.md  ENGINEERING_PLAN.md  PROPOSAL.md  README.md  pyproject.toml  requirements-demma.txt
configs/: grpo_smoke.yaml  sft.yaml  smoke_cpu.yaml  smoke_run.yaml
configs/verl/: grpo_caregiver.yaml
data/: scenarios_smoke.jsonl
docs/: verl_integration.md  verl_patch.diff
paper/: final_rps_method_section_locked_zh_9.md
prompts/: caregiver_system_prompt.md
prompts/rubrics/: _judge_template.md  c_safety.yaml  r_fit.yaml  r_goal.yaml  u_terminal.yaml
prompts/strategy_cards/: 01_nurse.md  02_vera.md  03_spikes.md  04_dice.md  05_reality_orientation.md  06_therapeutic_fibbing.md  07_reminiscence_therapy.md  08_montessori_method.md  09_redirection.md  10_non_committal.md
scripts/: download_demma.py  generate_scenarios.py  launch_verl_smoke.sh  preview_judge_prompt.py  run_smoke.py  train_grpo.py  train_sft.py
src/: __init__.py
src/data/: __init__.py  caregiver_client.py  demma_client.py  demma_real_client.py  demma_vllm_client.py  schemas.py
src/rewards/: clinical_anchors.yaml  judge_prompt.py  llm_judge.py  mock_judge.py  rubric.py  turn_level.py  vllm_judge_adapter.py
src/training/: advantage.py  grpo_advantage.py  grpo_loss.py  prompt_loader.py  sft_extract.py  verl_advantage_patch.py  verl_reward_manager.py  verl_rollout_worker.py
tests/: conftest.py  test_advantage.py  test_demma_client.py  test_schemas.py  test_turn_level.py
